--- a/android/app/src/main/res/layout/activity_video_camera.xml
+++ b/android/app/src/main/res/layout/activity_video_camera.xml
@@ -22,13 +22,13 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/tvAngle"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:text="Left Arm Angle"
-        />
+<!--        <TextView-->
+<!--            android:id="@+id/tvAngle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:text="Left Arm Angle"-->
+<!--        />-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cameraFragmentLayout"
