Added login with google functionality

--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,6 @@
     >
 
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/logoBackground"
             android:layout_width="match_parent"
@@ -25,9 +24,11 @@
             app:layout_constraintEnd_toEndOf="parent"
         >
             <ImageView
-                android:id="@+id/ivAppLogo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/ivBackgroundImage"
+                android:src="@drawable/login_screen_background_image"
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,29 @@
             android:layout_height="0dp"
             android:layout_weight="4"
         >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"
+                android:fontFamily="sans-serif"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textAlignment="center"
+                android:text="PhysioFit"
+            />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/googleSignInButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+            />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
