Minor bug fixes - backButtonPressed navigation

--- a/android/app/src/main/res/layout/activity_exercise_performance.xml
+++ b/android/app/src/main/res/layout/activity_exercise_performance.xml
@@ -83,6 +83,17 @@
                 app:layout_constraintTop_toTopOf="parent"
             />
 
+            <Button
+                android:id="@+id/btnGoHome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Continue"
+                android:layout_margin="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+            />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
