--- a/android/app/src/main/res/layout/fragment_camera.xml
+++ b/android/app/src/main/res/layout/fragment_camera.xml
@@ -33,5 +33,7 @@
 
     <include
         android:id="@+id/bottom_sheet_layout"
-        layout="@layout/info_bottom_sheet" />
+        layout="@layout/info_bottom_sheet"
+        android:visibility="gone"
+        />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
