--- a/android/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/android/app/src/main/res/menu/menu_bottom_nav.xml
@@ -16,12 +16,12 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@id/camera_fragment"
+        android:id="@+id/home_activity"
         android:icon="@drawable/ic_home"
         android:title="Home" />
 
     <item
-        android:id="@id/gallery_fragment"
+        android:id="@+id/profile_activity"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
