--- a/android/app/src/main/res/layout/activity_profile.xml
+++ b/android/app/src/main/res/layout/activity_profile.xml
@@ -161,6 +161,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
+            android:id="@+id/signOutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Log Out"
