--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -57,10 +57,10 @@
             />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etUserName"
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Username"
+                android:hint="E-mail"
                 app:layout_constraintTop_toBottomOf="@id/tvPhysioFit"
                 android:layout_marginVertical="20dp"
                 android:layout_marginHorizontal="20dp"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"
-                app:layout_constraintTop_toBottomOf="@id/etUserName"
+                app:layout_constraintTop_toBottomOf="@id/etEmail"
                 android:layout_marginVertical="20dp"
                 android:layout_marginHorizontal="20dp"
             />
