--- a/android/app/src/main/res/layout/activity_profile.xml
+++ b/android/app/src/main/res/layout/activity_profile.xml
@@ -160,6 +160,20 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/clScrollViewYourProgression"
+            android:layout_margin="10dp"
+            >
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/barChart"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+            />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/signOutButton"
             android:layout_width="match_parent"
