--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail"
+                android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@id/tvPhysioFit"
                 android:layout_marginVertical="20dp"
                 android:layout_marginHorizontal="20dp"
@@ -71,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
+                android:maxLines="1"
                 android:inputType="textPassword"
                 app:layout_constraintTop_toBottomOf="@id/etEmail"
                 android:layout_marginVertical="20dp"
